<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/com_bg_wihte"
    android:orientation="vertical">

    <include layout="@layout/item_tool" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/com_bg_wihte"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/x29"
        android:paddingRight="@dimen/x42">

        <ImageView

            android:id="@+id/item_salerman_iv"
            android:layout_width="@dimen/y200"
            android:layout_height="@dimen/y280"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y20"
            android:scaleType="centerCrop"
            android:src="@drawable/touxiang_1500_2100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x29"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_salerman_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wule"
                android:textColor="@color/com_tv_black_333333"
                android:textSize="@dimen/comm_tv_14"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y20"
                android:background="@drawable/shape_salesman_item_bg"
                android:padding="@dimen/y6"
                android:text="@string/line_of_business"
                android:textColor="@color/com_tv_white_ffffff"
                android:textSize="@dimen/comm_tv_9" />

            <TextView
                android:id="@+id/item_salerman_tv_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y14"

                android:singleLine="true"
                android:text="@string/line_of_business_hint"
                android:textColor="@color/com_tv_black_333333"
                android:textSize="@dimen/comm_tv_13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y20"
                android:background="@drawable/shape_salesman_item_bg"
                android:padding="@dimen/y6"
                android:text="@string/business_introduction"
                android:textColor="@color/com_tv_white_ffffff"
                android:textSize="@dimen/comm_tv_9" />

            <TextView
                android:id="@+id/item_salerman_tv_introduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y14"
                android:lineSpacingExtra="@dimen/y6"
                android:maxLines="2"
                android:text="@string/business_introduction_hint"
                android:textColor="@color/com_tv_black_333333"
                android:textSize="@dimen/comm_tv_13" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y14"
        android:background="@color/com_bg_gray_eeeeee" />

</LinearLayout>