<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/com_bg_white_ffffff"
    android:orientation="vertical">

    <!--顶部-->
    <include layout="@layout/item_tool" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_allp_iv_logo"
            android:layout_width="@dimen/x289"
            android:layout_height="@dimen/y50"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/y14"
            android:layout_marginLeft="@dimen/x29"
            android:layout_marginTop="@dimen/y14"
            android:scaleType="centerInside"
            android:src="@drawable/list_logo_jianhang_1950_385" />

        <View
            android:id="@+id/item_allp_view"
            android:layout_width="@dimen/y2"
            android:layout_height="@dimen/x38"
            android:layout_centerInParent="true"
            android:background="@color/com_bg_gray_d6d6d6" />

        <TextView
            android:id="@+id/item_allp_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x29"
            android:layout_marginRight="@dimen/x29"
            android:layout_toRightOf="@id/item_allp_view"
            android:singleLine="true"
            android:text="@string/product_name_ex"
            android:textColor="@color/com_tv_black_333333"
            android:textSize="@dimen/comm_tv_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="@color/com_bg_gray_eeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/x29"
        android:paddingRight="@dimen/x29">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y54"
            android:layout_marginTop="@dimen/y54">

            <TextView
                android:id="@+id/item_allp_tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_of_interest_6"
                android:textColor="@color/com_tv_orige_ff9600"
                android:textSize="@dimen/comm_tv_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_allp_tv_rate"
                android:layout_marginTop="@dimen/y10"
                android:text="@string/rate_of_interest"
                android:textColor="@color/com_tv_gray_999999"
                android:textSize="@dimen/comm_tv_13" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <TextView

                android:id="@+id/item_allp_tv_limit_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/y54"
                android:layout_marginTop="@dimen/y16"
                android:text="@string/limit"
                android:textColor="@color/com_tv_gray_999999"
                android:textSize="@dimen/comm_tv_13" />

            <TextView

                android:id="@+id/item_allp_tv_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/item_allp_tv_limit_hint"
                android:text="@string/milion"
                android:textColor="@color/com_tv_black_333333"
                android:textSize="@dimen/comm_tv_20" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/y54"
                android:layout_marginTop="@dimen/y16"
                android:text="@string/year_limit"
                android:textColor="@color/com_tv_gray_999999"
                android:textSize="@dimen/comm_tv_13" />

            <TextView
                android:id="@+id/item_allp_tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:text="@string/year"
                android:textColor="@color/com_tv_black_333333"
                android:textSize="@dimen/comm_tv_20" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <com.aoben.qproj.widget.CirclePercentBar
                android:id="@+id/item_allp_circle_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                app:arcColor="@color/colorPrimary"
                app:arcEndColor="@color/com_bg_orige_ff9600"
                app:arcStartColor="@color/com_bg_orige_ff9600"
                app:arcWidth="@dimen/y4"
                app:centerTextColor="@color/colorAccent"
                app:centerTextSize="@dimen/comm_tv_13"
                app:circleRadius="@dimen/y76" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_allp_tv_person_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:textColor="@color/com_tv_black_333333"
                    android:textSize="@dimen/comm_tv_9" />

                <TextView
                    android:id="@+id/item_allp_tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y6"
                    android:text="@string/money"
                    android:textColor="@color/com_tv_black_333333"
                    android:textSize="@dimen/comm_tv_9" />
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="@color/com_bg_gray_eeeeee" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/y20"
        android:paddingLeft="@dimen/x29"
        android:paddingRight="@dimen/x29"
        android:paddingTop="@dimen/y20">


        <com.aoben.qproj.widget.StarUI
            android:id="@+id/item_allp_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x98"
            android:layout_toLeftOf="@+id/item_allp_star"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_allp_tv_pay_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_style"
                android:textColor="@color/com_tv_black_333333"
                android:textSize="@dimen/comm_tv_13" />

            <TextView
                android:id="@+id/item_allp_tv_advantage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y18"
                android:singleLine="true"
                android:text="@string/advantage"
                android:textSize="@dimen/comm_tv_10" />
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y14"
        android:background="@color/com_bg_gray_eeeeee" />
</LinearLayout>