<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_bg_white_ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="@dimen/comm_dim_65"
                android:layout_height="@dimen/comm_dim_65"
                android:layout_marginBottom="@dimen/comm_dim_14"
                android:layout_marginLeft="@dimen/comm_dim_17"
                android:layout_marginTop="@dimen/comm_dim_14"
                android:src="@drawable/detail_icon_pic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/comm_dim_26"
                android:layout_marginLeft="@dimen/comm_dim_15"
                android:layout_marginRight="@dimen/comm_dim_17"
                android:layout_marginTop="@dimen/comm_dim_26"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="建设银行--云快贷"
                    android:textColor="@color/com_tv_black_333333"
                    android:textSize="@dimen/comm_tv_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/comm_dim_12"
                    android:singleLine="true"
                    android:text="建设银行--云快贷"
                    android:textColor="@color/com_tv_gray_999999"
                    android:textSize="@dimen/comm_tv_10" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_dim_2"
            android:layout_marginLeft="@dimen/comm_dim_14"
            android:layout_marginRight="@dimen/comm_dim_14"
            android:layerType="software"
            android:background="@drawable/shape_dotted_line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/comm_dim_28"
            android:paddingRight="@dimen/comm_dim_28">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/comm_dim_20"
                android:layout_marginTop="@dimen/comm_dim_19"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interest"
                    android:textColor="@color/com_tv_gray_999999"
                    android:textSize="@dimen/comm_tv_12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/comm_dim_10"
                    android:text="@string/rate_of_interest_6"
                    android:textColor="@color/com_tv_orige_ff9600"
                    android:textSize="@dimen/comm_tv_23" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="@dimen/comm_dim_1"
                android:layout_height="@dimen/comm_dim_19"
                android:background="@color/com_bg_gray_eeeeee" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/comm_dim_20"
                android:layout_marginTop="@dimen/comm_dim_20"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limit"
                    android:textColor="@color/com_tv_gray_999999"
                    android:textSize="@dimen/comm_tv_12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/comm_dim_10"
                    android:text="@string/milion"
                    android:textColor="@color/com_tv_black_333333"
                    android:textSize="@dimen/comm_tv_23" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="@dimen/comm_dim_1"
                android:layout_height="@dimen/comm_dim_19"
                android:background="@color/com_bg_gray_eeeeee" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/comm_dim_20"
                android:layout_marginTop="@dimen/comm_dim_20"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year_limit"
                    android:textColor="@color/com_tv_gray_999999"
                    android:textSize="@dimen/comm_tv_12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/comm_dim_10"
                    android:text="@string/year"
                    android:textColor="@color/com_tv_black_333333"
                    android:textSize="@dimen/comm_tv_23" />
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_dim_2"
            android:layout_marginLeft="@dimen/comm_dim_14"
            android:layout_marginRight="@dimen/comm_dim_14"
            android:layerType="software"
            android:background="@drawable/shape_dotted_line" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/comm_dim_10"
            android:gravity="center"
            android:text="@string/pay_style"
            android:textColor="@color/com_tv_black_333333"
            android:textSize="@dimen/comm_tv_13" />


        <Button

            android:id="@+id/widget_pro_detail_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_dim_40"
            android:layout_marginLeft="@dimen/comm_dim_30"
            android:layout_marginRight="@dimen/comm_dim_30"
            android:layout_marginTop="@dimen/comm_dim_19"
            android:background="@drawable/selector_btn_bg"
            android:text="@string/i_want_konw"

            android:textColor="@color/com_tv_white_ffffff"
            android:textSize="@dimen/comm_tv_15" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_dim_7"
            android:layout_marginTop="@dimen/comm_dim_10"
            android:background="@color/com_bg_gray_eeeeee" />        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/comm_dim_13"
            android:text="@string/application_requirement"
            android:textColor="@color/com_tv_black_333333"
            android:textSize="@dimen/comm_tv_14"
            android:id="@+id/textView5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_dim_1"
            android:background="@color/com_bg_gray_eeeeee" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/comm_dim_10"
            android:paddingLeft="@dimen/comm_dim_13"
            android:paddingRight="@dimen/comm_dim_13"
            android:paddingTop="@dimen/comm_dim_10"
            android:text="@string/application_requirement_hint"
            android:textColor="@color/com_tv_gray_666666"
            android:textSize="@dimen/comm_tv_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_dim_7"
            android:background="@color/com_bg_gray_eeeeee" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/comm_dim_13"
            android:text="@string/prepare_data"
            android:textColor="@color/com_tv_black_333333"
            android:textSize="@dimen/comm_tv_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_dim_1"
            android:background="@color/com_bg_gray_eeeeee" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/comm_dim_10"
            android:paddingLeft="@dimen/comm_dim_13"
            android:paddingRight="@dimen/comm_dim_13"
            android:paddingTop="@dimen/comm_dim_10"
            android:text="@string/prepare_data_hint"
            android:textColor="@color/com_tv_gray_666666"
            android:textSize="@dimen/comm_tv_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_dim_7"
            android:background="@color/com_bg_gray_eeeeee" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/comm_dim_13"
            android:text="@string/operational_process"
            android:textColor="@color/com_tv_black_333333"
            android:textSize="@dimen/comm_tv_14"
            android:id="@+id/textView4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_dim_1"
            android:background="@color/com_bg_gray_eeeeee" />

        <com.aoben.qproj.widget.FlowItemUI
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>