<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/y560"
    android:background="@color/common_bg_trans"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/x667"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/dialog_layout_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingBottom="@dimen/y20"
        android:paddingLeft="@dimen/x22"
        android:paddingRight="@dimen/x22"
        android:paddingTop="@dimen/y20">


        <ImageView
            android:layout_width="@dimen/y22"
            android:layout_height="@dimen/y22"
            app:srcCompat="@drawable/ic_pop_icon_del" />
    </LinearLayout>

    <EditText
        android:layout_width="@dimen/x516"
        android:layout_marginLeft="@dimen/x76"
        android:layout_marginRight="@dimen/x76"
        android:layout_height="@dimen/y84"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y20"
        android:background="@color/com_bg_gray_eeeeee"
        android:hint="@string/input_your_phone"
        android:paddingLeft="@dimen/x29"
        android:textColorHint="@color/com_tv_gray_666666"
        android:textSize="@dimen/comm_tv_14" />

    <EditText
        android:layout_width="@dimen/x516"
        android:layout_marginLeft="@dimen/x76"
        android:layout_marginRight="@dimen/x76"
        android:layout_height="@dimen/y84"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y20"
        android:background="@color/com_bg_gray_eeeeee"
        android:hint="@string/input_your_phone"

        android:paddingLeft="@dimen/x29"

        android:textColorHint="@color/com_tv_gray_666666"
        android:textSize="@dimen/comm_tv_14" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="@color/com_tv_black_333333"
            android:textSize="@dimen/comm_tv_14" />

        <com.aoben.qproj.widget.CustomRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x71" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/plz_wait"
        android:textColor="@color/com_tv_gray_666666"
        android:textSize="@dimen/comm_tv_10" />


    <Button

        android:id="@+id/dialog_konw_btn"
        android:layout_width="@dimen/x516"
        android:layout_marginLeft="@dimen/x76"
        android:layout_marginRight="@dimen/x76"
        android:layout_height="@dimen/y80"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/y70"
        android:layout_marginTop="@dimen/y38"
        android:background="@drawable/selector_btn_bg"
        android:text="@string/insure"
        android:textColor="@color/com_tv_white_ffffff"
        android:textSize="@dimen/comm_tv_15" />
</LinearLayout>

</RelativeLayout>